--- a/Proje/static/style.css
+++ b/Proje/static/style.css
@@ -6,10 +6,14 @@ body {
 }
 
 .modal {
-    max-width: 800px;
-    overflow: visible;
+    max-width: 900px;
+    max-height: auto;
+    overflow: hidden;
 }
-
+.form {
+    max-height: auto;
+    overflow: hidden;
+}
 .input-field label {
     color: #000;
 }
@@ -66,6 +70,6 @@ body {
 /* Responsive adjustments */
 @media screen and (max-width: 600px) {
     .modal {
-        width: 95% !important;
+        width: auto !important;
     }
 }
