--- a/Proje/templates/index.html
+++ b/Proje/templates/index.html
@@ -53,7 +53,7 @@
             </form>
         </div>
         <div class="modal-footer">
-            <a href="#!" class="waves-effect waves-green btn-flat modal-close">İptal</a>
+            <a href="#!" class="waves-effect waves-green btn-flat modal-close" onclick="clearForm()">İptal</a>
             <a href="#!" class="waves-effect waves-green btn-flat" onclick="saveMeeting()">Kaydet</a>
         </div>
     </div>
